crates/anvil-tui/src/surfaces/watch/snapshots/anvil_tui__surfaces__watch__render__tests__snapshot_idle_empty.snap
---
source: crates/anvil-tui/src/surfaces/watch/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
┌[fg:#D95A00] [fg:#D95A00,bold]S[fg:#D95A00,bold]t[fg:#D95A00,bold]a[fg:#D95A00,bold]t[fg:#D95A00,bold]u[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]┌[fg:#85858A] [fg:#85858A]Q[fg:#85858A]u[fg:#85858A]e[fg:#85858A]u[fg:#85858A]e[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A] [fg:#85858A] [fg:#85858A]N[fg:#85858A]o[fg:#85858A] [fg:#85858A]p[fg:#85858A]e[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]a[fg:#85858A]n[fg:#85858A]g[fg:#85858A]e[fg:#85858A]s[fg:#85858A]                  │[fg:#85858A]
│[fg:#D95A00] [fg:#85858A,bold] [fg:#85858A,bold]o[fg:#85858A,bold] [fg:#85858A,bold]S[fg:#85858A,bold]t[fg:#85858A,bold]a[fg:#85858A,bold]r[fg:#85858A,bold]t[fg:#85858A,bold]i[fg:#85858A,bold]n[fg:#85858A,bold]g[fg:#85858A,bold]                          │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00] [fg:#85858A] [fg:#85858A]0[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A] [fg:#85858A]w[fg:#85858A]a[fg:#85858A]t[fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]d[fg:#85858A]                     │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#D95A00]                                      │[fg:#D95A00]│[fg:#85858A]                                      │[fg:#85858A]
└[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#85858A] [fg:#85858A]H[fg:#85858A]i[fg:#85858A]s[fg:#85858A]t[fg:#85858A]o[fg:#85858A]r[fg:#85858A]y[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]┌[fg:#85858A] [fg:#85858A]S[fg:#85858A]t[fg:#85858A]a[fg:#85858A]t[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A] [fg:#85858A] [fg:#85858A]N[fg:#85858A]o[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]n[fg:#85858A]s[fg:#85858A] [fg:#85858A]y[fg:#85858A]e[fg:#85858A]t[fg:#85858A]                         │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]T[fg:#85858A]o[fg:#85858A]t[fg:#85858A]a[fg:#85858A]l[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]n[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]0[fg:#EBEBEB]                     │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]P[fg:#85858A]a[fg:#85858A]s[fg:#85858A]s[fg:#85858A] [fg:#85858A]r[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]0[fg:#CF5E5E,bold]%[fg:#CF5E5E,bold]                    │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]A[fg:#85858A]v[fg:#85858A]g[fg:#85858A] [fg:#85858A]d[fg:#85858A]u[fg:#85858A]r[fg:#85858A]a[fg:#85858A]t[fg:#85858A]i[fg:#85858A]o[fg:#85858A]n[fg:#85858A]:[fg:#85858A] [fg:#85858A]0[fg:#EBEBEB]m[fg:#EBEBEB]s[fg:#EBEBEB]                   │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]F[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]0[fg:#EBEBEB]                     │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
