crates/anvil-tui/src/surfaces/watch/snapshots/anvil_tui__surfaces__watch__render__tests__snapshot_queue_focused.snap
---
source: crates/anvil-tui/src/surfaces/watch/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
┌[fg:#85858A] [fg:#85858A]S[fg:#85858A]t[fg:#85858A]a[fg:#85858A]t[fg:#85858A]u[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]┌[fg:#D95A00] [fg:#D95A00,bold]Q[fg:#D95A00,bold]u[fg:#D95A00,bold]e[fg:#D95A00,bold]u[fg:#D95A00,bold]e[fg:#D95A00,bold] [fg:#D95A00,bold]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]>[fg:#EBEBEB]>[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB,bold]r[fg:#EBEBEB,bold]c[fg:#EBEBEB,bold]/[fg:#EBEBEB,bold]m[fg:#EBEBEB,bold]a[fg:#EBEBEB,bold]i[fg:#EBEBEB,bold]n[fg:#EBEBEB,bold].[fg:#EBEBEB,bold]r[fg:#EBEBEB,bold]s[fg:#EBEBEB,bold] [fg:#85858A] [fg:#85858A]m[fg:#85858A]o[fg:#85858A]d[fg:#85858A]i[fg:#85858A]f[fg:#85858A]i[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A]1[fg:#85858A]0[fg:#85858A]:[fg:#85858A]3[fg:#85858A]0[fg:#85858A]:[fg:#85858A]0[fg:#85858A]1[fg:#85858A] [fg:#85858A][[fg:#85858A]+[fg:#85858A]][fg:#85858A] │[fg:#D95A00]
│[fg:#85858A] [fg:#2E8B57,bold] [fg:#2E8B57,bold]*[fg:#2E8B57,bold] [fg:#2E8B57,bold]W[fg:#2E8B57,bold]a[fg:#2E8B57,bold]t[fg:#2E8B57,bold]c[fg:#2E8B57,bold]h[fg:#2E8B57,bold]i[fg:#2E8B57,bold]n[fg:#2E8B57,bold]g[fg:#2E8B57,bold]                          │[fg:#85858A]│[fg:#D95A00] [fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]r[fg:#EBEBEB]c[fg:#EBEBEB]/[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]b[fg:#EBEBEB].[fg:#EBEBEB]r[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#85858A] [fg:#85858A]c[fg:#85858A]r[fg:#85858A]e[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A]1[fg:#85858A]0[fg:#85858A]:[fg:#85858A]3[fg:#85858A]0[fg:#85858A]:[fg:#85858A]0[fg:#85858A]2[fg:#85858A]        │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A] [fg:#85858A] [fg:#85858A]1[fg:#85858A]2[fg:#85858A]8[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A] [fg:#85858A]w[fg:#85858A]a[fg:#85858A]t[fg:#85858A]c[fg:#85858A]h[fg:#85858A]e[fg:#85858A]d[fg:#85858A]                   │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A] [fg:#D08C38,bold] [fg:#D08C38,bold]W[fg:#D08C38,bold]a[fg:#D08C38,bold]r[fg:#D08C38,bold]n[fg:#D08C38,bold]i[fg:#D08C38,bold]n[fg:#D08C38,bold]g[fg:#D08C38,bold]s[fg:#D08C38,bold]:[fg:#D08C38,bold] [fg:#D08C38,bold]2[fg:#D08C38,bold]                         │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#D95A00]                                      │[fg:#D95A00]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]└[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]
┌[fg:#85858A] [fg:#85858A]H[fg:#85858A]i[fg:#85858A]s[fg:#85858A]t[fg:#85858A]o[fg:#85858A]r[fg:#85858A]y[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]┌[fg:#85858A] [fg:#85858A]S[fg:#85858A]t[fg:#85858A]a[fg:#85858A]t[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]*[fg:#2E8B57] [fg:#2E8B57]5[fg:#EBEBEB]/[fg:#EBEBEB]5[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]1[fg:#85858A]2[fg:#85858A]0[fg:#85858A]0[fg:#85858A]m[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]1[fg:#85858A]0[fg:#85858A]:[fg:#85858A]2[fg:#85858A]9[fg:#85858A]:[fg:#85858A]5[fg:#85858A]0[fg:#85858A]      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]T[fg:#85858A]o[fg:#85858A]t[fg:#85858A]a[fg:#85858A]l[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]n[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]4[fg:#EBEBEB]2[fg:#EBEBEB]                    │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]x[fg:#CF5E5E] [fg:#CF5E5E]3[fg:#EBEBEB]/[fg:#EBEBEB]5[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB] [fg:#EBEBEB]9[fg:#85858A]8[fg:#85858A]0[fg:#85858A]m[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]1[fg:#85858A]0[fg:#85858A]:[fg:#85858A]2[fg:#85858A]8[fg:#85858A]:[fg:#85858A]3[fg:#85858A]0[fg:#85858A]       │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]P[fg:#85858A]a[fg:#85858A]s[fg:#85858A]s[fg:#85858A] [fg:#85858A]r[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]8[fg:#2E8B57,bold]8[fg:#2E8B57,bold]%[fg:#2E8B57,bold]                   │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]A[fg:#85858A]v[fg:#85858A]g[fg:#85858A] [fg:#85858A]d[fg:#85858A]u[fg:#85858A]r[fg:#85858A]a[fg:#85858A]t[fg:#85858A]i[fg:#85858A]o[fg:#85858A]n[fg:#85858A]:[fg:#85858A] [fg:#85858A]1[fg:#EBEBEB]0[fg:#EBEBEB]5[fg:#EBEBEB]0[fg:#EBEBEB]m[fg:#EBEBEB]s[fg:#EBEBEB]                │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A] [fg:#85858A] [fg:#85858A]F[fg:#85858A]i[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A] [fg:#85858A]1[fg:#EBEBEB]2[fg:#EBEBEB]8[fg:#EBEBEB]                   │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
│[fg:#85858A]                                      │[fg:#85858A]│[fg:#85858A]                                      │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
